<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/topLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/top_name"
            android:lineSpacingExtra="-16sp"
            android:textSize="12sp"

            android:gravity="center_horizontal|center_vertical"
            />
        <TextView
            android:id="@+id/argpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/topLogo"
            android:text="@string/app_name"
            android:lineSpacingExtra="-16sp"
            android:textSize="32sp"
            android:textColor="@color/text_Color"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/let_s_pair_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="199dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/welcometxt"
            android:textColor="@color/text_Color"
            android:textSize="15sp" />
    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGmail"
        style="@style/ButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60pxh"
        android:layout_above="@+id/btnDiscord"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_35pxh"
        android:layout_marginEnd="@dimen/_35pxh"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="Sign in With Google"
        app:cornerRadius="10dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconPadding="10dp"
        app:iconTint="#00100D0D"
        app:iconTintMode="src_atop"
        />

    <LinearLayout
        android:id="@+id/btnDiscord"
        android:layout_height="@dimen/_50pxh"
        android:layout_marginTop="@dimen/_20pxv"
        android:layout_above="@+id/privacyPolicy"
        android:layout_marginBottom="@dimen/_55sp"
        android:layout_marginStart="@dimen/_35pxh"
        android:layout_marginEnd="@dimen/_35pxh"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        style="@style/groupStyleindigo_A200cornerRadius">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_height="@dimen/_21pxh"
            android:layout_marginStart="10dp"

            android:layout_width="@dimen/_28pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_user"
            tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>

        <TextView
            android:ellipsize="end"
            android:id="@+id/txtSigninwithDi"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_10pxh"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLines="1"
            android:lineSpacingExtra="@dimen/_15pxh"
            android:textSize="@dimen/_16pxv"
            android:text="Sign in with Discord"
            android:textColor="@color/white_background"
            style="@style/ButtonTextStyle"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_35pxh"
        android:layout_alignParentBottom="true"
        android:autoLink="web"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/privacy_policy2"
        android:textColor="@color/text_Color"
        android:textSize="14sp" />






</RelativeLayout>